--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,1 +1,8 @@
 system.email=systopler@rambler.ru
+
+unexpected.exception=Ошибка выполнения операции: {0}
+common.exception=Выполнение действия невозможно: {0}
+business.exception={0}
+stale.object.exception=Объект был изменен другим пользователем. Для продолжения работы необходимо обновить текущую страницу
+entity.not.found.exception=Текущий объект не найден, возможно, он был удален другим пользователем или не доступен по политике доступа. Для продолжения работы необходимо вернутся на предыдущую страницу
+entity.has.children.exception=У объекта есть дочерние записи
